# SBC

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: camera.h  sbc.h  shader_m.h
shaders/: cube.fs  texture.fs  texture.vs
src/: main.cpp  sbc.cpp
